change the span value

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </section>
         </div>
-        <span style="font-size:30px;cursor:pointer;color:#000000; align-self: flex-start;"id="open" onclick="openNav();">=</span>
+        <span style="font-size:30px;cursor:pointer;color:#000000; align-self: flex-start;"id="open" onclick="openNav();">&#9776;</span>
         
         <div class="row" id="row_1" name="row1">
             <div class="col  one">
