--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>LearnChild</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/bootstrap.css">
-    <link rel="stylesheet" href="./css/TalkingKeyboard.css">
-    <link rel="icon" type="image/png" href="/favicon.png"/>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/SpeakingAlphabet.css">
+    <link rel="icon" type="image/png" href="images/favicon.png"/>
 </head>
 <body>
     <div class="container-fluid DIVcontainer" id="container">
@@ -134,6 +134,6 @@
         </div>
     </div>
     </div>
-    <script src="/js/Talkingkeyboard.js"></script>
+    <script src="js/SpeakingAlphabet.js"></script>
 </body>
 </html>
