fix the bug of the links are crawlable

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
         <div class="sidenave" id="mySidenav">
             <section class="close-section">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
                 <hr class="line"  size="3">
             </section>
             <section class="select-language-section">
